Attempt to fix spacing

--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -67,6 +67,7 @@ article {
     div.highlight {
         padding: 0;
         margin: 0;
+        border-radius: 5px;
     }
     pre.highlight {
         font-size: 0.9em;
